--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,12 @@ font-size: 0.8em;
   color: #fff;
   font-weight: 600;
 }
+.info ul li span a
+{
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+}
 
 .info .education li
 {
@@ -143,16 +149,17 @@ font-size: 0.8em;
   font-weight: 300;
 }
 
-.info.language .percent
+.info.computer .percent
 {
   position: relative;
   width: 100%;
   height: 6px;
   background: #081921;
+  border: 1px solid white;
   display: block;
   margin-top: 5px;
 }
-.info.language .percent div
+.info.computer .percent div
 {
   position: absolute;
   top: 0;
@@ -295,7 +302,7 @@ p
   color: #2a7da2;
   font-size: 16px;
 }
-
+/*
 .skills .box
 {
   position: relative;
@@ -319,7 +326,7 @@ p
   height: 10px;
   background: #f0f0f0;
 }
-.skills .box .percent div/*TODO: delete all skils blocks if possible*/
+.skills .box .percent div/*TODO: delete all skils blocks if possible
 {
   position: absolute;
   top: 0;
@@ -327,7 +334,7 @@ p
   height: 100%;
   background: #03a9f4;
 }
-
+*/
 .about .certificate
 {
   display: grid;
@@ -590,9 +597,5 @@ p
   .qualifications ul /*TODO: delete all interst blocks if possible*/
   {
     grid-template-columns: repeat(5,1fr);
-  }
-  .skills .box /*TODO: delete all skils blocks if possible*/
-  {
-    grid-template-columns: repeat(1,1fr);
   }
 }
